change logic in movie and watchlist services